adds react router

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-on-rails": "11.1.1"
+    "react-on-rails": "11.1.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
